--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,12 +14,15 @@
     "@tanstack/react-query": "^5.72.2",
     "axios": "^1.8.4",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.16.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.4"
+    "recharts": "^2.15.3",
+    "tailwindcss": "^4.1.4",
+    "video.js": "^8.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
